samples/_failures_safe/1760958918_f1c65d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0adf16f.c: In function ‘main’:
./samples/SAFE/__tmp_a0adf16f.c:168:5: error: expected identifier or ‘(’ at end of input
  168 |     int
      |     ^~~
./samples/SAFE/__tmp_a0adf16f.c:168:5: error: expected declaration or statement at end of input
